# lovelace

./: .env.example  .env.prod  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.github/: lock.yml  stale.yml
.github/workflows/: workflow.yaml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
api/lovelace/: app.py  database.py  models.py  schemas.py  security.py  settings.py
api/lovelace/routers/: auth.py  users.py
api/migrations/: env.py
api/migrations/versions/: 2a6f3cdb91d0_create_users_table.py  47ee37cad6cf_add_role_to_user_model2.py  6f5c0743ca88_add_role_to_user_model.py  7d826a538293_upgrade_to_postgres.py  9c86e83d6b99_update_mvp_models.py  f66224a3166a_create_mpv_models.py
api/scripts/: create_admin.py  manualdb.py
api/tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_users.py
ui/: .env  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  next.config.mjs  package-lock.json  package.json
ui/src/: auth.config.ts  auth.ts  middleware.ts
ui/src/app/: custom.module.css  global.css  layout.tsx  page.module.css  page.tsx  providers.tsx
ui/src/app/dashboard/: page.module.css  page.tsx
ui/src/app/playground/: page.tsx  playground.module.css
ui/src/app/problemset/: page.module.css  page.tsx
ui/src/app/styles/: input.module.css  multiselect.module.css
ui/src/app/types/: next-auth.d.ts
ui/src/components/: Navbar.tsx
ui/src/components/LovelaceCard/: LovelaceCardAction.module.css  LovelaceCardAction.tsx  LovelaceCardContent.module.css  LovelaceCardContent.tsx  LovelaceCardRoot.module.css  LovelaceCardRoot.tsx  LovelaceCardSide.module.css  LovelaceCardSide.tsx  LovelaceCardStatus.module.css  LovelaceCardStatus.tsx  LovelaceCardTags.module.css  LovelaceCardTags.tsx  LovelaceCardTitle.module.css  LovelaceCardTitle.tsx  index.tsx
ui/src/components/auth/: auth-form.module.css  auth-form.tsx  register-form.module.css  register-form.tsx  registration-completed.module.css  registration-completed.tsx
ui/src/components/cards/: problem-card.module.css  problem-card.tsx  problem-status.module.css  problem-status.tsx  problem.module.css  problem.tsx
ui/src/components/error/: not-found.module.css  not-found.tsx
ui/src/components/misc/: AvatarMenu.tsx  HeroTitle.module.css  HeroTitle.tsx  avatarmenu.module.css  gray-background.tsx  gray-bakcground.module.css  homepage-hero.module.css  homepage-hero.tsx  icon-color.module.css  icon-lovelace.jsx  icon-lovelace.tsx  theme-switcher.module.css  theme-switcher.tsx
ui/src/components/navbar/: HeaderSimple.tsx  navbar.module.css  navbar.tsx
ui/src/components/problemset/: filter-menu.module.css  filter-menu.tsx  (+2 more)
ui/src/lib/: actions.ts  routes.ts  types.ts  utils.ts
ui/src/mocks/: problem.ts  problems.ts
(+8 files in other folders)
